# PRJ-RS

./: Cargo.toml  README.md
examples/: miniredis_client.rs
libs/: mod.rs
libs/shared_lib/: Cargo.toml
libs/shared_lib/src/: client_model.rs  lib.rs  models.rs  sharded_db.rs
servers/miniminio/: Cargo.toml
servers/miniminio/examples/: miniminio_client.rs  test_message.rs
servers/miniminio/src/: client.rs  connection.rs  lib.rs  main.rs  message.rs
servers/miniminio/src/operations/: create_mutlipart_upload.rs  mod.rs
servers/miniminio/src/protocol/: connection.rs  message.rs  mod.rs  parser.rs
servers/miniredis/: Cargo.toml
servers/miniredis/src/: main.rs
